--- a/src/static/app.html
+++ b/src/static/app.html
@@ -169,13 +169,16 @@
             stroke-width: 2px;
             transition: all .2s;
             color: #fff;
-            cursor: pointer;
             clip-path: polygon(var(--slant-2) 0, calc(100% - var(--slant)) 0, 100% var(--slant),
                     calc(100% - var(--slant-2)) 100%, var(--slant) 100%, 0 calc(100% - var(--slant)));
             filter: brightness(150%);
         }
 
-        #go:hover {
+        #go:not([disabled]) {
+            cursor: pointer;
+        }
+
+        #go:hover:not([disabled]) {
             filter: brightness(200%);
         }
 
@@ -476,6 +479,7 @@
         .deezer.track {
             background: #E8D4ED;
         }
+
         .spotify.track {
             background: #91ffcc;
         }
@@ -503,6 +507,7 @@
         .deezer .text-border {
             background: linear-gradient(90deg, #E8D4ED00, #E8D4EDFF 30px, #E8D4EDFF);
         }
+
         .spotify .text-border {
             background: linear-gradient(90deg, #91ffcc00, #91ffccFF 30px, #91ffccFF);
         }
@@ -718,6 +723,157 @@
             fill: #ffffff;
         }
     </style>
+    <style>
+        @media screen and not (max-width: 600px) {
+            #modal-1 {
+                grid-template-columns: 1fr 230px;
+                grid-template-rows: 1fr;
+            }
+
+            #modal-1-img-container {
+                display: flex;
+            }
+
+            #modal-1-text {
+                border-right: #3f3f3f solid 5px;
+                padding-right: 20px;
+                margin-right: 20px;
+            }
+        }
+
+        @media screen and (max-width: 600px) {
+            #modal-1 {
+                grid-template-columns: 1fr;
+                grid-template-rows: auto;
+            }
+
+            #modal-1-img-container {
+                display: none;
+            }
+        }
+
+        #modal-1 {
+            max-width: 840px;
+            display: grid;
+            padding: 20px;
+            margin: 20px;
+        }
+
+        #modal-1[hidden] {
+            display: none;
+        }
+
+        #modal-1-text {
+            max-height: calc(100vh - 80px);
+            overflow: auto;
+        }
+
+        #catchphrase-1 {
+            color: #ab76b9;
+            font-size: 40px;
+            font-weight: 600;
+            margin-bottom: 20px;
+        }
+
+        #catchphrase-1>u {
+            text-decoration: #30a46e underline;
+        }
+
+        #catchphrase-2 {
+            font-size: 20px;
+            font-weight: 600;
+            margin-bottom: 10px;
+        }
+
+        #description {
+            margin-bottom: 5px;
+            line-height: 20px;
+        }
+
+        #description>u {
+            text-decoration: none;
+            background-color: #ACECCE;
+        }
+
+        #description>u:last-of-type {
+            text-decoration: none;
+            color: #fff;
+            background: #2E2F60;
+            padding: 3px;
+            border-radius: 2px;
+            background: repeating-linear-gradient(-45deg, #2E2F60, #2E2F60 10px, #414288 10px, #414288 15px);
+            white-space: nowrap;
+            filter: brightness(150%);
+        }
+
+        #note {
+            line-height: 20px;
+        }
+
+        #modal-1-img-container {
+            width: 100%;
+            height: 100%;
+            justify-content: center;
+            align-items: center;
+        }
+
+        #modal-1-img {
+            width: 160px;
+            height: 190px;
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: 70px 70px 50px;
+        }
+
+        #img-fakecard {
+            transform: rotate(8deg);
+            row-gap: 10px;
+            width: 160px;
+            height: 50px;
+            padding: 15px 0 5px 0;
+            text-align: center;
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: 20px 20px;
+            border-radius: 0 0 5px 5px;
+            background-color: #D1A9DB;
+            box-shadow: #ab76b9 -5px 5px;
+        }
+
+        #fakecard-input {
+            border-radius: 0 0 5px 5px;
+            font-style: italic;
+            font-family: monospace;
+            font-weight: 600;
+            background-color: #E8D4ED;
+            margin: 0 5px;
+            text-align: left;
+            padding: 2px 5px;
+            color: #6d636f;
+        }
+
+        #img-text {
+            display: flex;
+            flex-direction: column;
+            justify-content: end;
+            align-items: center;
+            font-size: 20px;
+            font-weight: 600;
+            transform: rotate(-6deg);
+        }
+
+        #img-arrow {
+            position: relative;
+            overflow: visible;
+        }
+
+        #img-arrow-svg {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+    </style>
 </head>
 
 <body modal="off">
@@ -772,12 +928,53 @@
             </div>
         </div>
         <div id="bottom">
-            <span id="go">Let's go!</span>
+            <span id="go" disabled>Let's go!</span>
         </div>
     </div>
     <div id="modal-container" style="display: flex;">
         <div id="modal">
-            <div id="modal-playlist">
+            <div id="modal-1">
+                <div id="modal-1-text">
+                    <div id="catchphrase-1">
+                        Edit on <u>Deezer</u>,<br>see changes on <u>Spotify</u>.
+                    </div>
+                    <div id="catchphrase-2">
+                        Export your playlists from a music platform to another, or sync 'em between the two
+                    </div>
+                    <div id="description">
+                        Make sure both playlists are set to <u>Public</u>, copy the <u>Share link</u>, paste it, and hit
+                        <u>Let's go!</u>
+                    </div>
+                    <div id="note">
+                        Note : some songs may be available on only one platform
+                    </div>
+                </div>
+                <div id="modal-1-img-container">
+                    <div id="modal-1-img">
+                        <div id="img-fakecard">
+                            <div id="fakecard-text">0 tracks • 00:00:00</div>
+                            <div id="fakecard-input">Deezer's link</div>
+                        </div>
+                        <div id="img-arrow">
+                            <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" id="img-arrow-svg"
+                                preserveAspectRatio="xMidYMid meet" width="100" height="100">
+                                <path d="M50 98Q10 60,40 10" style="stroke:#000;stroke-width:3;" stroke-linecap="round"
+                                    fill="none"></path>
+                                <path d="M20,15L40,10" style="stroke:#000;stroke-width:3;" stroke-linecap="round"
+                                    fill="none"></path>
+                                <path d="M40,10L50,25" style="stroke:#000;stroke-width:3;" stroke-linecap="round"
+                                    fill="none"></path>
+                            </svg>
+                        </div>
+                        <div id="img-text">
+                            <span>
+                                Paste here
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="modal-playlist" style="display: none;">
                 <div id="playlist-card">
                     <div class="card modal deezer" id="md-card">
                         <div class="card-img">
@@ -989,7 +1186,7 @@
                 document.getElementById('md-infos').innerText = this.infos.innerText;
                 document.getElementById('md-link').value = this.link.value;
                 document.getElementById('current-tracks').innerHTML = '';
-                for(let i = 0; i < this.tracks.length; i++) {
+                for (let i = 0; i < this.tracks.length; i++) {
                     this.createTrackElement(document.getElementById('current-tracks'), this.tracks[i]);
                 }
                 if (this.type == 'spotify') {
@@ -1059,6 +1256,10 @@
                 document.body.setAttribute('modal', 'off');
                 setTimeout(() => {
                     document.getElementById('modal-container').style.display = 'none';
+                    if(document.getElementById('modal-1').attributes['hidden'] === undefined) {
+                        document.getElementById('modal-1').setAttribute('hidden', '');
+                        document.getElementById('modal-playlist').style.display = '';
+                    }
                 }, 200)
                 modalactive = 0;
             } else {
